--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,8 @@
 @import "./components/headernavigator";
 @import "./components/buttoncomponent";
 @import "./components/cardcomponent";
+@import "./components/loadercomponent";
+@import "./components/modalcomponent";
 
 // import layout
 @import "./layout/skipcontent";
