--- a/src/sass/pages/_booking.scss
+++ b/src/sass/pages/_booking.scss
@@ -1,3 +1,22 @@
+.navbar {
+ background-color: transparent;
+  position: absolute;
+  top: 0px;
+  height: 60px;
+}
+
+/* .navbar-brand, .navbar-collapse {
+  width: 30%;
+} */
+
+.nav-link {
+  color: white !important;
+}
+
+.nav-link.active {
+  border-bottom: 3px solid #FF5757;
+}
+
 .form-div {
   padding: 0px;
   padding-bottom: 20px;
@@ -11,6 +30,7 @@
 }
 
 .form-div .nav-tabs {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   margin-bottom: 15px;
@@ -45,12 +65,9 @@
   padding: 0px 30px;
 }
 
-// .form-div .form-booking {
-//   padding-bottom: 140px;
-// }
-
 .form-group {
-  display: grid !important;
+  display: -ms-grid;
+  display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 20px;
   margin: 0 30px;
@@ -62,6 +79,7 @@
 }
 
 .form-group .input-group {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: 100px 1fr;
   width: 90%;
@@ -85,33 +103,44 @@
 }
 
 .booking-vid {
-  position: relative;
+  position: absolute;
+  width: 100%;
+  height: 450px;
+  top: 0px;
+  z-index: -1;
 }
 
 .booking-video {
-  position: relative;
+  position: absolute;
   width: 100%;
+  height: 100%;
   object-fit: cover;
-  height: 50vh;
 }
 
+video {
+  min-width: 100%;
+}
 .logo2 {
   position: absolute;
   top: 8rem;
 }
-.grid-container {
-  display: flex;
-  grid-template-columns: auto auto auto;
 
-  padding: 10px;
+.grid-container {
+  // display: flex;
+  width: 100%
 }
-.grid-item {
-  padding: 10px;
-  font-size: 30px;
-  text-align: center;
-}
+
 .grid-items {
   padding: 23px;
+}
+
+
+.grid-item {
+  // padding: 10px;
+  font-size: 30px;
+  text-align: center;
+  position: relative;
+  // width: 30% !important;
 }
 
 .inputContainer i {
@@ -136,8 +165,8 @@
   background: #ff5757;
   color: white;
   border-radius: 5px;
-  width: 300px;
-  height: 58px;
+  width: 100%;
+  height: 50px;
   text-decoration: none;
 }
 
@@ -156,31 +185,118 @@
 
 .input-icons {
   width: 100%;
-  margin-bottom: 10px;
 }
 
 .icon {
   padding: 10px;
   min-width: 40px;
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .input-field {
   width: 100%;
-  height: 4rem;
+  height: 50px;
   text-align: center;
   border: 0.5px solid #9b9a9a;
-  background: rgba(63, 136, 197, 0.03);
+  border-radius: 5px;
+  font-size: 1rem;
+  padding-top: 5px;
+  padding-left: 50px;
+  text-align: left;
+  font-weight: 400;
+}
+
+.input-field:focus {
+  border: 0.5px solid #043F7C !important;
+  color: #043F7C;
+  background-color: rgba(4, 63, 124, 0.04);
+  box-sizing: border-box;
   border-radius: 5px;
 }
 
-.input-field2 {
-  width: 100%;
-  height: 4rem;
-  text-align: center;
-  border: 0.5px solid #9b9a9a;
-  background: rgba(63, 136, 197, 0.03);
-  border-radius: 5px;
+.nav-tabs {
+  border-radius: 25% !important;
 }
+
+.input-field::placeholder {
+  color: rgba(0, 0, 0, 0.20) !important;
+}
+
+.input-field:hover {
+  // background-color: rgba(4, 63, 124, 0.04);
+  border: 0.5px solid #043f7c;
+}
+
+.tabs {
+  position: absolute;
+  width: 220px;
+  height: 50px;
+  top: 399.5px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.tabs.left {
+  left: 0px;
+  background: #043F7C;
+  border-radius: 5px 0px 0px 0px;
+}
+
+.tabs.right {
+  left: 220px;
+  background: #FFFFFF;
+  box-shadow: 2px 2px 2px rgba(4, 63, 124, 0.1);
+  border-radius: 0px 5px 0px 0px;
+}
+
+.tabContent {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 150px;
+  left: 0px;
+  top: 454px;
+
+  background: #FFFFFF;
+  box-shadow: 5px 5px 10px rgba(4, 63, 124, 0.1);
+  border-radius: 0px 5px 5px 5px;
+}
+
+// .tabContent form {
+//   width: 100%;
+// }
+
+// .tabContent form .row {
+//   margin: auto;
+//   width: 990px
+// }
+
+
+.tabs.left img {
+  position: relative;
+  left: 21px;
+  top: 15px;
+}
+
+.tabs.left p {
+  position: absolute;
+  left: 51px;
+  top: 15px;
+}
+
+.tabs.right p {
+  position: absolute;
+  left: 78px;
+  top: 16px;
+}
+
+.tabs.right img {
+  position: relative;
+  left: 48px;
+  top: 15px;
+}
+
 
 .bottom-cont {
   width: 100%;
@@ -211,20 +327,6 @@
   padding: 2rem;
 }
 
-.input-field::placeholder {
-  font-size: 15px;
-  padding-right: 150px;
-  padding-top: -5px;
-  opacity: 80%;
-}
-
-.input-field2::placeholder {
-  font-size: 15px;
-  padding-right: 85px;
-  padding-top: 1px;
-  font-weight: 400;
-  opacity: 80%;
-}
 
 // ::placeholder {
 //   font-size: 20px;
